--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.thymeleaf.cache=false
 logging.level.org.springframework.security=INFO
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/wropol?useUnicode=yes&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://37.187.52.160:3306/wropol?useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.username=wropol
+spring.datasource.password=kurwywinoipianino
 
 spring.resources.chain.strategy.content.enabled=true
 
