czego to logowanie na polwro nie dziaua

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,9 @@ spring.resources.chain.strategy.content.enabled=true
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=mysql
 
 server.port=6969
+
+cookie=f9af4b3693c0ac62873f7e2bfa0367c5
