--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-debug=true
-spring.thymeleaf.cache=false
+debug=false
+spring.thymeleaf.cache=true
 logging.level.org.springframework.security=INFO
 
 
 spring.datasource.url=jdbc:mysql://localhost:3306/wropol?useUnicode=yes&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.username=wropol
+spring.datasource.password=kurwywinoipianino
 
 spring.resources.chain.strategy.content.enabled=true
 
@@ -14,6 +14,4 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=mysql
 
-server.port=6969
-
-cookie=8abc565551cbe8cd6ba0f8eda042331e
+server.port=56969
