test-deploy, cache, template

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 debug=false
 spring.thymeleaf.cache=true
 logging.level.org.springframework.security=INFO
+logging.file=wropol.log
 
-
-spring.datasource.url=jdbc:mysql://localhost:3306/wropol?useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://37.187.52.160:3306/wropol?useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=wropol
 spring.datasource.password=kurwywinoipianino
+spring.datasource.testOnBorrow=true
+spring.datasource.validationQuery=SELECT 1
 
 spring.resources.chain.strategy.content.enabled=true
 
